# django-data-replication

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  MAINIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
data_replication/: __init__.py  admin.py  apps.py  conf.py  forms.py  models.py  tasks.py  urls.py  views.py
data_replication/backends/: base.py  mongo.py  splunk.py
data_replication/fixtures/data_replication/: initial_data.json
data_replication/management/: __init__.py
data_replication/management/commands/: __init__.py  replicate.py
data_replication/migrations/: 0001_initial.py  0002_auto_20210722_2316.py  0002_initial_data.py
data_replication/tests/: context.py  factories.py  test_backgrounds.py  test_base.py  test_fixtures.py  test_forms.py  test_management.py  test_models.py  test_mongo.py  test_replicate.py  test_splunk.py  test_tasks.py  test_urls.py  test_views.py
demo_app/: manage.py
demo_app/demo_app/: settings.py  settings_test.py  urls.py  wsgi.py
demo_app/example/: apps.py  models.py  replication.py
demo_app/ip_verification/: apps.py  managers.py  models.py  replication.py  utils.py
demo_app/ip_verification/tests/: __init__.py  factories.py
tests/: context.py  test_advanced.py
